# cmake_first

./: README.md
v4/: CMakeLists.txt
v4/calc/: CMakeLists.txt  add.cc  div.cc  mult.cc  sub.cc
v4/include/: calc.hpp
v4/sort/: CMakeLists.txt
v4/test1/: CMakeLists.txt  calc.cc
v4/test2/: CMakeLists.txt
v5_gtest/: CMakeLists.txt  main.cc
